--- a/style.css
+++ b/style.css
@@ -55,6 +55,10 @@ body{
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
   margin: 20px 0;
 }
+.btn:hover {
+  opacity: 0.8;
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.4);
+}
 #img_box{
   width:200px;
   border-radius: 10px;
